--- a/compose.yaml
+++ b/compose.yaml
@@ -5,3 +5,5 @@ services:
       - type: bind
         source: ./
         target: /app
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
